Mobile spacing & fixes

--- a/resources/css/sass/pages/_static.scss
+++ b/resources/css/sass/pages/_static.scss
@@ -128,7 +128,7 @@
             }
 
             &.smaller-top-margin {
-                margin-top: -42px;
+                margin-top: -32px;
             }
         }
     }
